deal with pinned regions. well still failed the test